--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -121,7 +121,7 @@
         app:layout_constraintTop_toBottomOf="@+id/radioGroup">
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/resetButton"
             style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -131,7 +131,7 @@
             android:text="@string/reset" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/convertButton"
             style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
