--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,7 @@
         android:layout_marginEnd="24dp"
         android:autofillHints="temperature"
         android:ems="10"
+        android:hint="@string/input_temperature_placeholder"
         android:inputType="numberDecimal"
         android:labelFor="@id/inputTemperature"
         android:text="@string/input_temperature"
@@ -127,8 +128,10 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_weight="1"
-            android:backgroundTint="#FFC107"
-            android:text="@string/reset" />
+            android:backgroundTint="@color/gray"
+            android:text="@string/reset"
+            android:textColor="@color/white"
+            app:strokeColor="@color/white" />
 
         <Button
             android:id="@+id/convertButton"
@@ -137,8 +140,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_weight="1"
-            android:backgroundTint="#FFC107"
-            android:text="@string/calculate" />
+            android:backgroundTint="@color/gray"
+            android:text="@string/calculate"
+            android:textColor="@color/white" />
     </LinearLayout>
 
 
